feat: 2024 updates for 0.2.9

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,8 +121,8 @@
     <value />
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="INVENTAR_MODEL" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\inventar-model.xls;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="INVENTAR_MODEL_XLSX" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\INVENTAR-MODEL.xlsx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="REGISTRU_MODEL" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\registru_model.xlsx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
